--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-masonry-component": "^6.2.1",
     "react-modal": "^3.10.1",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.1.6",
