--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.1.6",
     "react-scripts": "3.1.1",
+    "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0"
