--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-firestore": "^0.8.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
