--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-firestore": "^0.8.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
